@@ -1,3 +1,7 @@
+SimpleComplex/Validate 1.x, 2017-08-22
+--------------------------------------
+- Validate recording do (at least) log failing subject's type.
+
 SimpleComplex/Validate 1.x, 2017-08-20
 --------------------------------------
 - ValidationRuleSet constructor shan't have any required parameters,
